@@ -15,7 +15,9 @@ This file documents the revision history for UFL::Phonebook.
         - Convert controllers to Chained actions
         - Remove ugly uri_for override
         - Move address-related packages out of the ::Entry namespace
-        - Add address inflation for 'Emergency Contact Mailing Address'
+        - Add address inflation for 'Emergency Contact Mailing
+          Address'
+        - Convert to Class::Accessor::Fast
 
 0.19  Tue Nov 28 16:00:51 EST 2006
         - Cleanup {encode,decode}_ufid
